mpv: make sure to use vaapi + other stuff

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -1,16 +1,22 @@
 profile=gpu-hq
+hwdec=vaapi
+
 scale=ewa_lanczossharp
 cscale=ewa_lanczossharp
-video-sync=display-resample
-interpolation
-tscale=oversample
 ytdl-format=bestvideo[height<=?1440]+bestaudio/best
 
 keep-open=yes
-slang=sv,en
-alang=ja,en,sv
+slang=sv,swe,en,eng
+alang=ja,jap,en,eng,sv,swe
+
 screenshot-format=webp
 screenshot-webp-lossless=yes
 screenshot-tag-colorspace=yes
 screenshot-template="%F-%wHh%wMm%wSs"
 screenshot-directory=~/Pictures/mpvshots/
+
+script-opts-append=autocrop-auto=no
+
+script-opts-append=webm-target_filesize=6000
+script-opts-append=webm-output_format=mp4
+script-opts-append=webm-libvpx_threads=16
