--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -20,3 +20,6 @@ script-opts-append=autocrop-auto=no
 script-opts-append=webm-target_filesize=6000
 script-opts-append=webm-output_format=mp4
 script-opts-append=webm-libvpx_threads=16
+
+script-opts-append=ytdl_hook-ytdl_path=yt-dlp
+ytdl-raw-options=compat-options=format-sort
