mpv: so many country codes

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -8,7 +8,7 @@ ytdl-format=bestvideo[height<=?1440]+bestaudio/best
 
 keep-open=yes
 slang=sv,swe,en,eng
-alang=ja,jap,en,eng,sv,swe
+alang=ja,jap,jpn,en,eng,sv,swe
 
 screenshot-format=webp
 screenshot-webp-lossless=yes
