mpv.conf: switch to gpu-next n stuff

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -1,10 +1,10 @@
 profile=gpu-hq
 hwdec=vaapi
+gpu-api=vulkan
+vo=gpu-next
 ao=pipewire
 
-scale=ewa_lanczossharp
-cscale=ewa_lanczossharp
-ytdl-format=bestvideo[height<=?1440]+bestaudio/best
+demuxer-max-bytes=1073741824
 
 keep-open=yes
 slang=sv,swe,en,eng
@@ -23,4 +23,5 @@ script-opts-append=webm-output_format=mp4
 script-opts-append=webm-libvpx_threads=16
 
 script-opts-append=ytdl_hook-ytdl_path=yt-dlp
+ytdl-format=bestvideo[height<=?1440]+bestaudio/best
 ytdl-raw-options=compat-options=format-sort
