weechat: add python.anotify, sync

--- a/.config/weechat/plugins.conf
+++ b/.config/weechat/plugins.conf
@@ -6,10 +6,24 @@
 #
 # Use commands like /set or /fset to change settings in WeeChat.
 #
-# For more info, see: https://weechat.org/doc/quickstart
+# For more info, see: https://weechat.org/doc/quickstart/
 #
 
 [var]
+python.anotify.icon = "/usr/share/pixmaps/weechat.xpm"
+python.anotify.show_channel_topic = "on"
+python.anotify.show_dcc = "on"
+python.anotify.show_highlighted_message = "on"
+python.anotify.show_invite_message = "on"
+python.anotify.show_notice_message = "off"
+python.anotify.show_private_action_message = "on"
+python.anotify.show_private_message = "on"
+python.anotify.show_public_action_message = "off"
+python.anotify.show_public_message = "off"
+python.anotify.show_server = "on"
+python.anotify.show_upgrade_ended = "on"
+python.anotify.sticky = "off"
+python.anotify.sticky_away = "on"
 python.terminal-title.title = "WeeChat %version [%buffer_count] %buffer_number: %buffer_name{%buffer_nicklist_count} [%hotlist]"
 python.zncplayback.servers = "BNCesper, BNCfreenode, BNCquakenet"
 
