yolo update everything since I forgot about it for over a year

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,7 @@
 [user]
 	name = Magnus Boman
 	email = magunasu.b97@gmail.com
+	signingkey = 8B86B6AFAAEDB613
 [pull]
 	rebase = false
 [filter "lfs"]
@@ -14,3 +15,5 @@
   insteadOf = https://aur.archlinux.org/
 [url "github:"]
   insteadOf = https://github.com/
+[protocol "file"]
+	allow = always
