--- a/.config/nvchecker/nvchecker.toml
+++ b/.config/nvchecker/nvchecker.toml
@@ -3,12 +3,6 @@ oldver = "old_ver.json"
 newver = "new_ver.json"
 keyfile = "keyfile.toml"
 
-[conky-katt]
-source = "github"
-github = "brndnmtthws/conky"
-prefix = "v"
-use_latest_release = true
-
 [falltergeist]
 source = "github"
 github = "falltergeist/falltergeist"
@@ -26,30 +20,20 @@ github = "mikf/gallery-dl"
 prefix = "v"
 use_latest_release = true
 
-[godotpcktool-bin]
+#[hunspell-sv]
+#source = "cmd"
+#cmd = '''curl -s https://extensions.libreoffice.org/en/extensions/show/swedish-spelling-dictionary-den-stora-svenska-ordlistan | grep releaseRow -A1 -m2 | grep -Po "\d+.\d+"'''
+
+[komga]
 source = "github"
-github = "hhyyrylainen/GodotPckTool"
+github = "gotson/komga"
 prefix = "v"
 use_latest_release = true
-
-[hunspell-sv]
-source = "cmd"
-cmd = '''curl -s https://extensions.libreoffice.org/en/extensions/show/swedish-spelling-dictionary-den-stora-svenska-ordlistan | grep releaseRow -A1 -m2 | grep -Po "\d+.\d+"'''
-
-[lib32-mozjpeg]
-source = "aur"
-aur = "mozjpeg"
-strip_release = true
 
 [libva-headless]
 source = "github"
 github = "intel/libva"
 use_latest_tag = true
-
-[powerdevil-light]
-source = "archpkg"
-archpkg = "powerdevil"
-strip_release = true
 
 [qimgv-light]
 source = "github"
@@ -57,8 +41,14 @@ github = "easymodo/qimgv"
 prefix = "v"
 use_latest_release = true
 
-[shellcheck-bin]
+[libjodycode]
 source = "github"
-github = "koalaman/shellcheck"
+github = "jbruchon/libjodycode"
 prefix = "v"
-use_latest_release = true
+use_max_tag = true
+
+[jdupes]
+source = "github"
+github = "jbruchon/jdupes"
+prefix = "v"
+use_latest_tag = true
