--- a/.config/weechat/spell.conf
+++ b/.config/weechat/spell.conf
@@ -6,7 +6,7 @@
 #
 # Use commands like /set or /fset to change settings in WeeChat.
 #
-# For more info, see: https://weechat.org/doc/quickstart/
+# For more info, see: https://weechat.org/doc/weechat/quickstart/
 #
 
 [color]
@@ -19,7 +19,7 @@ suggestion_delimiter_word = cyan
 commands = "away,command,cycle,kick,kickban,me,msg,notice,part,query,quit,topic"
 default_dict = ""
 during_search = off
-enabled = on
+enabled = off
 real_time = off
 suggestions = -1
 word_min_length = 2
