--- a/.config/weechat/xfer.conf
+++ b/.config/weechat/xfer.conf
@@ -6,7 +6,7 @@
 #
 # Use commands like /set or /fset to change settings in WeeChat.
 #
-# For more info, see: https://weechat.org/doc/quickstart/
+# For more info, see: https://weechat.org/doc/weechat/quickstart/
 #
 
 [look]
@@ -43,7 +43,7 @@ auto_check_crc32 = off
 auto_rename = on
 auto_resume = on
 convert_spaces = on
-download_path = "%h/xfer"
+download_path = "${weechat_data_dir}/xfer"
 download_temporary_suffix = ".part"
 upload_path = "~"
 use_nick_in_filename = on
