--- a/.config/weechat/weechat.conf
+++ b/.config/weechat/weechat.conf
@@ -34,6 +34,7 @@ buffer_notify_default = all
 buffer_position = end
 buffer_search_case_sensitive = off
 buffer_search_force_default = off
+buffer_search_history = local
 buffer_search_regex = off
 buffer_search_where = prefix_message
 buffer_time_format = "${color:252}%H:${color:245}%M:${color:240}%S"
@@ -192,6 +193,7 @@ chat_value = cyan
 chat_value_null = blue
 emphasized = yellow
 emphasized_bg = magenta
+eval_syntax_colors = "green,lightred,lightblue,lightmagenta,yellow,cyan"
 input_actions = lightgreen
 input_text_not_found = red
 item_away = yellow
@@ -357,6 +359,8 @@ title.type = window
 
 [layout]
 _zoom.window = "1;0;0;0;irc;BNClibera.#archlinux-wiki"
+
+[buffer]
 
 [notify]
 
@@ -575,6 +579,18 @@ up = "/input history_previous"
 [key_search]
 ctrl-q = "/input search_stop"
 ctrl-r = "/input search_switch_regex"
+down = "/input search_next"
+meta-c = "/input search_switch_case"
+return = "/input search_stop_here"
+tab = "/input search_switch_where"
+up = "/input search_previous"
+
+[key_histsearch]
+ctrl-o = "/input history_use_get_next"
+ctrl-q = "/input search_stop"
+ctrl-r = "/input search_previous"
+ctrl-s = "/input search_next"
+ctrl-x = "/input search_switch_regex"
 down = "/input search_next"
 meta-c = "/input search_switch_case"
 return = "/input search_stop_here"
